--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Poppins:wght@400;500;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Poppins:wght@400;500;800&display=swap");
 
-*{
+* {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-
+  font-family: "Poppins", sans-serif;
 }
-.container{
+.container {
   max-width: 1280px;
   margin: 0 auto;
 }
-
+.main_container {
+  height: calc(100vh-70px);
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
